// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StepValuesOverrideFilesFeature should submit a form with a git repository 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-background pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <section
            class="flex flex-col"
          >
            <h1
              class="text-neutral text-2xl font-medium mb-2"
            >
              Values override as file
            </h1>
            <form
              class="space-y-10"
            >
              <div>
                <p
                  class="text-sm text-neutral-350"
                >
                  Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository.
                </p>
                <span
                  aria-controls="radix-:rd:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
                  data-state="closed"
                  type="button"
                >
                  How it works 
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-circle-question text-xs"
                  />
                </span>
              </div>
              <div
                class="flex flex-col gap-4"
              >
                <div
                  class=""
                >
                  <div
                    class="input input--select"
                    data-testid="select"
                  >
                    <label
                      class="!translate-y-0 !text-xs"
                      for="File source"
                    >
                      File source
                    </label>
                    <div
                      class=" css-b62m3t-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-3-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="input-select__control css-13cymwt-control"
                      >
                        <div
                          class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                        >
                          <span
                            class="mr-1 text-sm text-neutral"
                          >
                            Git repository
                          </span>
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-readonly="true"
                            class="css-mohuvp-dummyInput-DummyInput"
                            id="File source"
                            inputmode="none"
                            role="combobox"
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="File source"
                        type="hidden"
                        value="GIT_REPOSITORY"
                      />
                    </div>
                    <input
                      name="File source"
                      type="hidden"
                      value="GIT_REPOSITORY"
                    />
                    <div
                      class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-angle-down text-sm text-neutral-subtle"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral text-base font-medium mb-2"
                >
                  Override from repository
                </h2>
                <p
                  class="mb-6 text-sm text-neutral-350"
                >
                  Specify the repository and the path containing the override yaml file to be passed via the “-f” helm argument. More than one file can be used as override by adding them in the path field separated by a semi-colon. If you don’t have a repository, you can set the override manually or via a raw YAML file.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    data-testid="git-provider-setting"
                  />
                  <div
                    data-testid="git-repository-setting"
                  />
                  <div
                    data-testid="git-branch-settings"
                  />
                  <div>
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input group input--label-up"
                        >
                          <div
                            class=""
                          >
                            <label
                              class="input__label translate-y-2 text-sm"
                              for="Overrides path"
                            >
                              Overrides path
                            </label>
                            <input
                              class="input__value"
                              data-testid="input-text"
                              id="Overrides path"
                              name="paths"
                              type="text"
                              value="/"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <p
                      class="ml-4 mt-1 text-xs text-neutral-350"
                    >
                      Specify multiple paths by separating them with a semi-colon
                    </p>
                  </div>
                  <div
                    class="flex flex-row gap-x-4 p-4 border rounded text-sm border-info-component bg-surface-info-subtle text-info mt-3"
                    data-accent-color="sky"
                  >
                    <div
                      class="-order-2 text-base leading-6"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-regular fa-circle-info "
                      />
                    </div>
                    <div
                      class="-order-1 mr-auto gap-x-4 text-neutral"
                    >
                      <span
                        class="block font-medium leading-6"
                      >
                        Auto-deploy is not activated
                      </span>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="flex justify-between"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
                  type="button"
                >
                  Back
                </button>
                <div
                  class="flex gap-3"
                >
                  <button
                    class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
                    type="submit"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`StepValuesOverrideFilesFeature should submit a form with a yaml 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-background pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <section
            class="flex flex-col"
          >
            <h1
              class="text-neutral text-2xl font-medium mb-2"
            >
              Values override as file
            </h1>
            <form
              class="space-y-10"
            >
              <div>
                <p
                  class="text-sm text-neutral-350"
                >
                  Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository.
                </p>
                <span
                  aria-controls="radix-:rk:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
                  data-state="closed"
                  type="button"
                >
                  How it works 
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-circle-question text-xs"
                  />
                </span>
              </div>
              <div
                class="flex flex-col gap-4"
              >
                <div
                  class=""
                >
                  <div
                    class="input input--select"
                    data-testid="select"
                  >
                    <label
                      class="!translate-y-0 !text-xs"
                      for="File source"
                    >
                      File source
                    </label>
                    <div
                      class=" css-b62m3t-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-4-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="input-select__control css-13cymwt-control"
                      >
                        <div
                          class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                        >
                          <span
                            class="mr-1 text-sm text-neutral"
                          >
                            Raw YAML
                          </span>
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-readonly="true"
                            class="css-mohuvp-dummyInput-DummyInput"
                            id="File source"
                            inputmode="none"
                            role="combobox"
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="File source"
                        type="hidden"
                        value="YAML"
                      />
                    </div>
                    <input
                      name="File source"
                      type="hidden"
                      value="YAML"
                    />
                    <div
                      class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-angle-down text-sm text-neutral-subtle"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral text-base font-medium mb-2"
                >
                  Override with raw Yaml
                </h2>
                <p
                  class="mb-6 text-sm text-neutral-350"
                >
                  You can define here the YAML containing the overrides you want to apply. The YAML will be stored by Qovery and can be updated later within the settings but no history will be retained.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class="mb-5 rounded border border-neutral bg-surface-neutral-subtle w-full"
                    data-testid="block-content"
                  >
                    <div
                      class="flex h-9 items-center justify-between border-b border-neutral px-4"
                    >
                      <h2
                        class="text-ssm font-medium text-neutral"
                      >
                        Raw YAML
                      </h2>
                      <button
                        class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-xs h-6 rounded bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral aspect-square justify-center p-0 hover:text-neutral-400"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="fa-regular fa-pen "
                        />
                      </button>
                    </div>
                    <div
                      class="p-0"
                    >
                      <section
                        style="display: flex; position: relative; text-align: initial; width: 100%; height: 300px;"
                      >
                        <div
                          style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;"
                        >
                          <div
                            class="aspect-square border-2  animate-spin rounded-full border-solid border-neutral border-r-neutral-strong w-4 "
                            data-testid="spinner"
                          />
                        </div>
                        <div
                          style="width: 100%; display: none;"
                        />
                      </section>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="flex justify-between"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
                  type="button"
                >
                  Back
                </button>
                <div
                  class="flex gap-3"
                >
                  <button
                    class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
                    type="submit"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
  <script
    src="https://cdn.jsdelivr.net/npm/monaco-editor@0.54.0/min/vs/loader.js"
  />
</body>
`;
